[package]
name = "rt-ring"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Lock-free SPSC ring buffer with overwrite-oldest semantics for real-time applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hasanzakeri/rt-ring"
readme = "README.md"
keywords = ["ring-buffer", "spsc", "lock-free", "real-time", "audio"]
categories = ["concurrency", "data-structures"]
exclude = ["fuzz/", ".githooks/", ".github/", ".vscode/"]

[features]
loom-tests = []

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
loom = "0.7"
ringbuf = "0.4"

[[bench]]
name = "throughput"
harness = false